# fastapi-arch-tmpl

./: Dockerfile  Dockerfile.locust  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  locustfile.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yml
app/: main.py  models.py  routes.py
app/api/: client.py  client_parking.py  coffee.py  items.py  parking.py  publish_consume_coffee.py  routes.py  users.py
app/clients/: base.py
app/core/: base_response.py  config.py  exceptions_handlers.py  logger.py  session.py
app/domain/: __init__.py  client.py  client_parking.py  parking.py
app/models/: __init__.py  base.py  coffee.py  item.py  user.py
app/repository/: base_repository.py  client_parking_repository.py  client_repository.py  coffee_repository.py  item_repository.py  parking_repository.py  user_repository.py
app/rmq/: consumer.py  publisher.py
app/schemas/: __init__.py  base.py  coffee.py  item.py  user.py
app/services/: client_parking_service.py
migrations/: env.py
migrations/versions/: 0001_init.py
random_coffee/: Dockerfile  main.py  random_coffee.json
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  factories.py  test_parking.py  test_repository.py
tests/test_api/: test_coffee_api.py  test_users_api.py
tests/test_clients/: test_base_client.py
tests/test_repository/: test_coffee_repository.py  test_user_repository.py
