[tool.poetry]
name = "fastapi-arch-tmpl"
version = "0.0.1"
description = "fastapi-arch-tmpl"
authors = ["pog7x <poluningm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
aiohttp = "^3.11.14"
aio-pika = "^9.5.5"
SQLAlchemy = "^2.0.39"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
pydantic = "^2.10.6"
alembic = "^1.15.1"
httpx = "^0.28.1"
sqlmodel = "^0.0.24"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^1.3.1"
flake8 = "^5.0.4"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "^0.25.3"
factory-boy = "^3.3.3"
Faker = "^37.0.2"
asgi-lifespan = "^2.1.0"
mypy = "^1.15"
polyfactory = "^2.19.0"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
required_plugins = [
    "pytest-asyncio",
    "pytest-cov",
]
addopts = "--cov=app --cov-report term-missing -v"
testpaths = ["tests"]
markers = ["fast: run tests without extra dependencies"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["venv", "migrations"]

[tool.black]
line-length = 88
target-version = ["py312"]
preview = true
exclude = '''
/(
  | venv
  | migrations
)/
'''

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
exclude = ["venv", "migrations"]
