[tool.poetry]
name = "fastapi-arch-tmpl"
version = "0.0.1"
description = "fastapi-arch-tmpl"
authors = ["pog7x <poluningm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
aiohttp = "^3.13.2"
aio-pika = "^9.5.8"
SQLAlchemy = "^2.0.44"
uvicorn = "^0.38.0"
fastapi = "^0.121.2"
pydantic-settings = "^2.12.0"
pydantic = "^2.12.4"
alembic = "^1.17.2"
httpx = "^0.28.1"
sqlmodel = "^0.0.27"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "7.0.0"
black = "^25.11.0"
isort = "^7.0.0"
autoflake = "^2.3.1"
flake8 = "^7.3.0"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "^1.2.0"
factory-boy = "^3.3.3"
Faker = "^38.2.0"
asgi-lifespan = "^2.1.0"
mypy = "^1.18"
polyfactory = "^2.22.4"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
required_plugins = [
    "pytest-asyncio",
    "pytest-cov",
]
addopts = "--cov=app --cov-report term-missing -v"
testpaths = ["tests"]
markers = ["fast: run tests without extra dependencies"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["venv", "migrations"]

[tool.black]
line-length = 88
target-version = ["py312"]
preview = true
exclude = '''
/(
  | venv
  | migrations
)/
'''

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
exclude = ["venv", "migrations"]
